--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Company Name | Info about company etc... </title> <!--  CHANGE THIS  -->
+  <title>Anchor Sports Group</title> <!--  CHANGE THIS  -->
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -30,18 +30,10 @@
     <ul>
       <li> <a href="/home">Home</a> </li>
       <li> <a href="/about">About</a> </li>
-      <li>
-        <a href="/services">Services</a>
+      <img src="assets/logos/Gold-Gradient.png" alt="">
 
-        <ul class="dropdown" id="dropdown">
-          <li><a href="/services/service1">Service 1</a></li>
-          <li><a href="/services/service2">Service 2</a></li>
-          <li><a href="/services/service3">Service 3</a></li>
-          <li><a href="/services/service4">Service 4</a></li>
-        </ul>
-      </li>
+      <li> <a href="/services">Services</a> </li>
       <li> <a href="/contact">Contact</a> </li>
-      <li> <a href="/login">Login</a> </li>
 
     </ul>
 
@@ -52,19 +44,16 @@
   <section class="footer">
     <div class="social-links">
         <p>Follow us on Social Media:</p>
-        <a href="https://www.instagram.com/"><img src="assets/icons/instagram.png" alt=""></a>
-        <a href="https://www.tiktok.com/"><img src="assets/icons/tiktok.png" alt=""></a>
-        <a href="https://twitter.com/"><img src="assets/icons/twitter.png" alt=""></a>
-        <a href="https://www.facebook.com/"><img src="assets/icons/facebook.png" alt=""></a>
+        <a href="https://www.instagram.com/anchorsports_ltd"><img src="assets/icons/instagram.png" alt=""></a>
     </div>
 
     <div class="footer-links">
         <div class="content">
           <a href="/home">Home</a>
           <a href="/about">About</a>
+          <img src="assets/logos/Gold-Gradient.png" alt="">
           <a href="/services">Services</a>
           <a href="/contact">Contact</a>
-          <a href="/login">Login</a>
         </div>
     </div>
 
